--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,43 @@
 #root {
-  max-width: 1280px;
+  max-width: 1200px;
+  min-width: 800px;
   margin: 0 auto;
-  padding: 2rem;
+}
+
+.todolist h2 {
+  border: 1px solid black;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.todolist-container {
+  border: 1px solid #d2d2d2;
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #d2d2d2;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.items {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  /* justify-content: space-between; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.items label {
+  font-weight: bold;
+  margin-right: 10px;
 }
 
-.card {
-  padding: 2em;
+.items input {
+  width: 100%;
+  border: 1px soild white;
+  border-radius: 20px;
+  padding: 8px;
 }
 
-.read-the-docs {
-  color: #888;
+.todolist-container .addTodo {
+  padding: 10px 20px;
+  margin-top: 20px;
+  align-self: flex-end;
 }
